# omnibioai-toolserver

./: .dockerignore  .gitignore  .ruff.toml  ALL_CODE_omnibioai-toolserver_20260111_193933.txt  Dockerfile  Dockerfile.new  README.md  ci.yml  coverage.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  toolserver_app.py
.github/workflows_disabled/: ci.yml
github/workflows/: ci.yml
obsolete/: tool.yaml
scripts/: start_app.sh
tests/: conftest.py  test_app.py  test_david_annotation.py  test_endpoints.py  test_enrichr_tool.py  test_executor.py  test_http_tool_executor.py  test_rest_api_handler.py  test_store.py  test_tools_init.py  test_toolserver_app_coverage.py
toolserver/: __init__.py  executor.py  models.py  registry.py  store.py
toolserver/adapters/: http_tool_executor.py
toolserver/tools/: __init__.py  david_annotation.py  enrichr_pathway.py  rest_api_handler.py
