[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnibioai-toolserver"
version = "0.1.2"
description = "Standalone HTTP ToolServer for OmniBioAI (REST-backed bioinformatics tools like Enrichr)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Manish Kumar" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.23",
  "httpx>=0.27",
  "pydantic>=2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
]

[tool.setuptools]
packages = ["toolserver"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "-q",
  "--cov=toolserver",
  "--cov-report=term-missing",
  "--cov-fail-under=95",
]

[tool.coverage.run]
branch = true
source = ["toolserver"]
omit = [
  "*/tests/*",
  "*/__pycache__/*",
]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]